--- a/TradeMonitoringServer/TradeMonitoringServer.csproj
+++ b/TradeMonitoringServer/TradeMonitoringServer.csproj
@@ -7,19 +7,21 @@
     <RootNamespace>TradeMonitoringServer</RootNamespace>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(RunConfiguration)' == 'stock_price_app_server' " />
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
   <ItemGroup>
     <None Remove="Swashbuckle.AspNetCore.SwaggerGen" />
     <None Remove="Microsoft.AspNetCore.Http" />
     <None Remove="Responses\" />
     <None Remove="Services\" />
     <None Remove="Interfaces\" />
-    <None Remove="Extensions\" />
+    <None Remove="Utility\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Messages\" />
     <Folder Include="Services\" />
     <Folder Include="Interfaces\" />
-    <Folder Include="Extensions\" />
+    <Folder Include="Utility\" />
   </ItemGroup>
 </Project>
