--- a/TradeMonitoringServer/appsettings.json
+++ b/TradeMonitoringServer/appsettings.json
@@ -1,11 +1,6 @@
 {
-  "Kestrel": {
-    "EndPoints": {
-      "Http": {
-        "Url": "http://localhost:6000"
-      }
-    }
-  },
+
+  "Urls": "http://localhost:6000",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
